# ivs-project

./: .editorconfig  .gitignore  LICENCE.txt  Makefile  README.md  appinstaller_1.0_amd64.deb  calculario_2.0_amd64.deb  hodnoceni.txt  skutecnost.txt
profiling/: READMEprofiling.md  example100vals.txt  generate_random.sh  makefile  profiling_src.cpp  report.txt
profiling/Profiling/Hundred Values/: callgrind100Values.out.12494  fileHUN.txt
profiling/Profiling/Ten Values/: callgrind10Values.out.12519  fileTEN.txt
profiling/Profiling/Thousand Values/: callgrind1000Values.out.12478  fileTHOUS.txt
src/: CMakeLists.txt  Calc.cpp  Doxyfile  Makefile  mainwindow.ui  mainwindow_castr.ui  math_tests.cpp  res.qrc
src/Header Files/: hfunc_lib.h  mainwindow.h  math_lib.h
src/Source Files/: hFunc.cpp  main.cpp  mainwindow.cpp  math_lib.cpp  profiling_src.cpp
src/Test Files/: makefile  test_proof.sh
src/Test Files/HFunc Test/: hfunc_tests.cpp  makefile
src/Test Files/Math Lib Test/: makefile  math_tests.cpp
